--- a/MvvmDemo/MvvmDemo/MvvmDemo/MvvmDemo.csproj
+++ b/MvvmDemo/MvvmDemo/MvvmDemo/MvvmDemo.csproj
@@ -16,13 +16,28 @@
 
   <ItemGroup>
     <Reference Include="CafeLib.Core">
-      <HintPath>..\..\..\..\CafeLib\Mobile\CafeLib.Mobile\bin\Debug\netstandard2.0\CafeLib.Core.dll</HintPath>
+      <HintPath>..\..\..\..\CafeLib\Core\CafeLib.Core.IoC\bin\Debug\netstandard2.0\CafeLib.Core.dll</HintPath>
     </Reference>
     <Reference Include="CafeLib.Core.IoC">
-      <HintPath>..\..\..\..\CafeLib\Mobile\CafeLib.Mobile\bin\Debug\netstandard2.0\CafeLib.Core.IoC.dll</HintPath>
+      <HintPath>..\..\..\..\CafeLib\Core\CafeLib.Core.IoC\bin\Debug\netstandard2.0\CafeLib.Core.IoC.dll</HintPath>
     </Reference>
     <Reference Include="CafeLib.Mobile">
       <HintPath>..\..\..\..\CafeLib\Mobile\CafeLib.Mobile\bin\Debug\netstandard2.0\CafeLib.Mobile.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Views\EnterUserPage.xaml.cs">
+      <DependentUpon>EnterUserPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\PlaylistPage.xaml.cs">
+      <DependentUpon>PlaylistPage.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Views\EnterUserPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
