Updated DroneLander to use CafeLib.Mobile 0.8.0

--- a/DroneLander/DroneLander/DroneLander.Android/DroneLander.Android.csproj
+++ b/DroneLander/DroneLander/DroneLander.Android/DroneLander.Android.csproj
@@ -16,7 +16,7 @@
     <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
     <AndroidUseLatestPlatformSdk>false</AndroidUseLatestPlatformSdk>
-    <TargetFrameworkVersion>v8.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v10.0</TargetFrameworkVersion>
     <AndroidHttpClientHandlerType>Xamarin.Android.Net.AndroidClientHandler</AndroidHttpClientHandlerType>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
@@ -42,15 +42,6 @@
     <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CafeLib.Core">
-      <HintPath>..\..\..\..\CafeLib\Mobile\CafeLib.Mobile\bin\Debug\netstandard2.0\CafeLib.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="CafeLib.Core.IoC">
-      <HintPath>..\..\..\..\CafeLib\Mobile\CafeLib.Mobile\bin\Debug\netstandard2.0\CafeLib.Core.IoC.dll</HintPath>
-    </Reference>
-    <Reference Include="CafeLib.Mobile">
-      <HintPath>..\..\..\..\CafeLib\Mobile\CafeLib.Mobile\bin\Debug\netstandard2.0\CafeLib.Mobile.dll</HintPath>
-    </Reference>
     <Reference Include="Mono.Android" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -58,18 +49,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CafeLib.Mobile">
+      <Version>0.8.0</Version>
+    </PackageReference>
+    <PackageReference Include="CafeLib.Mobile.Android">
+      <Version>0.8.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection">
-      <Version>2.2.0</Version>
+      <Version>3.1.5</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging">
-      <Version>2.2.0</Version>
+      <Version>3.1.5</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="4.0.0.425677" />
-    <PackageReference Include="Xamarin.Android.Support.Design" Version="28.0.0.1" />
-    <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="28.0.0.1" />
-    <PackageReference Include="Xamarin.Android.Support.v4" Version="28.0.0.1" />
-    <PackageReference Include="Xamarin.Android.Support.v7.CardView" Version="28.0.0.1" />
-    <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="28.0.0.1" />
+    <PackageReference Include="Xamarin.Android.Support.v4">
+      <Version>28.0.0.3</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Android.Support.v7.AppCompat">
+      <Version>28.0.0.3</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Forms" Version="4.7.0.1080" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
